# python-dlstbx

./: .git-notifier  .gitignore  .gitlab-ci.yml  .gitmodules  .known-python3-violations  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  SConscript  __init__.py  catalog-info.yaml  controller  libtbx_config  libtbx_refresh.py  pyproject.toml  requirements.conda.txt  requirements.py  run_tests.py  runpytest  setup.cfg  setup.py  wrapper
.github/workflows/: docker-image.yml
algorithms/integration/: SConscript
algorithms/profile_model/: SConscript
candygram/: candygram.py
cif_header_templates/: dls-i03.cbftt  dls-i04.cbftt
command_line/: adsc_streamer.py  align_crystal.py  archive_dataset_for_qa.py  argh.py  check_dlq.py  compare_screening_results.py  dc_sim_verify.py  debug-missing-files-SCI-7634.py  dlq_check.py  dlq_purge.py  dlq_reinject.py  dlsnxs2cbf.py  eiger2xds.py  eiger_emulator.py  eiger_slurper.py  ep_predict.py  ep_predict_phase.py  ep_predict_results.py  filter_grid.py  find_funny_eiger_frames.py  find_in_ispyb.py  find_spot.py  fix_cluster_jobs.py  gadabout.py  gda_listen.py  gda_write.py  get_activemq_statistics.py  get_graylog_statistics.py  get_pia_results.py  get_processing_statistics.py  get_screening_results.py  go.py  graylog.py  gridscan3d.py  h5rewrite.py  hdf5_missing_frames.py  i19-tail.py  inject.py  isort_launcher.py  ispyb_call.py  (+59 more)
conf/: config.example.cfg
contrib/: candygram.py  feed_xrc.py
controller/: strategyenvironment.py  test_strategyenvironment.py
controller/strategy/: queue_dynamic.py  queue_static.py  simple.py  test_simple.py
dc_sim/: __init__.py  check.py  dbserverclient.py  dc_sim.py  definitions.py  mydb.py  test_dc_sim.py  tst_dc_sim.py
doc/decisions/: 0001-ssx-result-aggregation.md  index.md
doc/zocalo/: README.md  archive-cbf.gv  commands.md  index.md  mimas.md  per-image-analysis.md  recipe.md  services.md  xia2.md
eiger_stream/: data.py  graylogcsv-extract-times.py  kafka-consumer.py  kafka-producer.py  kafka-to-analysis.py  stream-analysis.py  zmq-consumer.py  zmq-to-kafka.py
extensions/: fit_image_integation_ext.py  nave_profile_model_ext.py
format/: FormatEiger0MQDump.py
gda_interface/: dejava.py
ispyb/: ispyb.py  test_ispyb.py
ispybtbx/: __init__.py  test_ispyb.py
jmp/algorithms/: SConscript
mimas/: __init__.py  core.py  test_validation.py  test_zocalo_message.py
module_files/global/: directories
profiling/: __init__.py
qa/: comparators.py  database.py  decorators.py  loader.py  qa.py  result.py  term.py  testsuite.py  tst_comparators.py  tst_database.py  tst_decorators.py  tst_units.py  tst_xia2dbfilter.py  tst_xia2runner.py  units.py  xia2dbfilter.py  xia2runner.py
qa/tests/: 3QQM.py  4ORL.py  X4_wide.py  __init__.py  fastset.py  insulin_reversephi.py  mad_example.py  rhogdi2a4.py  zenodo33555_cytidine.py
recipes/: __init__.py
scratch/mg/: diz.html
services/: archiver.py  cluster.py  cluster_monitor.py  cluster_submission.py  controller.py  dispatcher.py  dropfile_pickup.py  filemonitoring.py  filemonitoring_create_job.py  filewatcher.py  images.py  ispyb.py  ispybsvc.py  ispybsvc_em.py  ispybsvc_pia.py  load_producer.py  load_receiver.py  logwatcher.py  mailer.py  mimas.py  mimas_backlog.py  nexusparser.py  notifygda.py  per_image_analysis.py  per_image_analysis_store_and_notify.py  run_xia2.py  sample_dummy.py  schlockmeister.py  scrub.py  statistics.py  stream_analysis.py  stream_dispatcher.py  stream_dumper.py  test_filewatcher.py  test_process.py  trigger.py  validation.py  xray_centering.py
src/dlstbx/: __init__.py  crud.py  requirements.py  schemas.py
stomp/: __init__.py  test_stomp.py
swmr/: h5check.py  h5maker.py  h5rewrite.py  h5watcher.py
system_test/: __init__.py  activemq.py  activemq_test.py  archiver-partial.xml  archiver-success-part1.xml  archiver-success-part2.xml  archiver-success.xml  archiver.py  archiver.xml  cluster.py  common.py  dispatcher.py  filewatcher.py  nexusparser.py  per-image-analysis.py  recipe_service.py
test/: test_bitshuffle.py  test_python3_regression.py  test_system_tests.py
test/command_line/: test_service.py  test_service_monitor.py  test_version.py
test/services/: test_filewatcher.py  test_ispybsvc.py  test_ispybsvc_em.py  test_per_image_analysis.py
test/summed_test/: __init__.py  analyser.py  runner.py
test/super_test/: __init__.py  analyser.py  runner.py
test/wrapper/: test_fast_dp.py  test_xia2.py
tests/: conftest.py  test_system_tests.py
tests/cli/: test_eiger2xds.py  test_h5rewrite.py
tests/controller/: test_strategyenvironment.py
tests/dc_sim/: test_dc_sim.py  test_em_sim.py
tests/ispybtbx/: test_ispyb.py
tests/mimas/: conftest.py  test_core.py  test_i19.py  test_plugin.py  test_ssx.py  test_validation.py
tests/services/: test_archiver.py  test_cluster.py  test_filewatcher.py  test_ispybsvc_em.py  test_mimas.py  test_per_image_analysis.py  test_trigger.py  test_xray_centering.py
tests/util/: test_hdf5.py  test_logging.py  test_pdb.py  test_util.py  test_xray_centering.py  (+1 more)
util/: __init__.py  big_ep.py  big_ep_helpers.py  cluster.py  colorstreamhandler.py  dxtbx_to_dozor.py  fast_dp.py  fast_ep.py  gda.py  graylog.py  hdf5.py  html2ansi.py  jmxstats.py  kafka.py  merging_statistics.py  mr_utils.py  offline_transport.py  processing_stats.py  radar_plot.py  result.py  rrdtool.py  sanity.py  shelxc.py  symlink.py  test_xray_centering.py  version.py  xia2.py  xray_centering.py  xraycentering.py
workflow/: frontend.py  status.py  status_monitor.py  test_frontend.py  test_status.py  test_status_monitor.py
wrapper/: anode.py  autoPROC.py  autoSHARP.py  autobuild.py  best.py  big_ep.py  big_ep_report.py  crank2.py  dc_sim.py  dimple.py  dlstbx_align_crystal.py  dozor.py  edna.py  ep_predict.py  fast_dp.py  fast_ep.py  fast_rdp.py  i19screen.py  mosflm_strategy.py  mr_predict.py  mrbump.py  relion.py  rlv.py  screen19.py  screen19_mx.py  shelxc_stats.py  spot_counts_per_image.py  stepped_transmission.py  timg.py  topaz3_wrapper.py  xia2.py  xia2_multiplex.py  xia2_to_shelxcde.py  xoalign.py
(+528 files in other folders)
