[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "I"]
unfixable = ["F841"]
# E501 line too long (handled by formatter)
# E741 Ambiguous variable name (We have lots of meaningful I, L, l)
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"installer/**.py" = ["I"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["xia2"]
required-imports = ["from __future__ import annotations"]
