[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dlstbx"
description = "Collection of DLS-internal tools for Data Analysis and beyond"
authors = [
    { name = "Diamond Light Source", email = "scientificsoftware@diamond.ac.uk" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">3.10"

[tool.hatch.version]
source = "vcs"
fallback-version = "1.dev"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/python-dlstbx"
Bug-Tracker = "https://github.com/DiamondLightSource/python-dlstbx/issues"

[project.scripts]
"dials.swirly_eyes" = "dlstbx.cli.swirly_eyes:run"
"dlstbx.align_crystal" = "dlstbx.cli.align_crystal:run"
"dlstbx.archive_ancient_visits" = "dlstbx.cli.archive_ancient_visits:run"
"dlstbx.dc_sim_verify" = "dlstbx.cli.dc_sim_verify:run"
"dlstbx.ep_predict_phase" = "dlstbx.cli.ep_predict_phase:run"
"dlstbx.ep_predict_results" = "dlstbx.cli.ep_predict_results:runmain"
"dlstbx.find_funny_eiger_frames" = "dlstbx.cli.find_funny_eiger_frames:run"
"dlstbx.find_in_ispyb" = "dlstbx.cli.find_in_ispyb:run"
"dlstbx.fix_cluster_jobs" = "dlstbx.cli.fix_cluster_jobs:run"
"dlstbx.get_activemq_statistics" = "dlstbx.cli.get_activemq_statistics:run"
"dlstbx.get_dcids_for_visit" = "dlstbx.cli.get_dcids_for_visit:run"
"dlstbx.get_graylog_statistics" = "dlstbx.cli.get_graylog_statistics:run"
"dlstbx.get_rabbitmq_statistics" = "dlstbx.cli.get_rabbitmq_statistics:run"
"dlstbx.graylog" = "dlstbx.cli.graylog:run"
"dlstbx.gridscan3d" = "dlstbx.cli.gridscan3d:run"
"dlstbx.h5rewrite" = "dlstbx.cli.h5rewrite:cli"
"dlstbx.hdf5_missing_frames" = "dlstbx.cli.hdf5_missing_frames:run"
"dlstbx.mimas" = "dlstbx.cli.mimas:run"
"dlstbx.mr_predict_results" = "dlstbx.cli.mr_predict_results:runmain"
"dlstbx.pickup" = "dlstbx.cli.pickup:run"
"dlstbx.pilatus_settings_check" = "dlstbx.cli.pilatus_settings_check:run"
"dlstbx.plot_reflections" = "dlstbx.cli.plot_reflections:run"
"dlstbx.queue_monitor" = "dlstbx.cli.queue_monitor:run"
"dlstbx.run_dozor" = "dlstbx.cli.run_dozor:run"
"dlstbx.run_health_checks" = "dlstbx.cli.run_health_checks:run"
"dlstbx.run_system_tests" = "dlstbx.cli.run_system_tests:run"
"dlstbx.service" = "dlstbx.cli.service:run"
"dlstbx.show_recipeID" = "dlstbx.cli.show_recipeID:run"
"dlstbx.status_monitor" = "dlstbx.cli.status_monitor:run"
"dlstbx.trim_pdb_bfactors" = "dlstbx.cli.trim_pdb_bfactors:run"
"dlstbx.version" = "dlstbx.cli.version:run"
"dlstbx.wrap" = "dlstbx.cli.wrap:run"
"dlstbx.wrap_fast_dp" = "dlstbx.cli.wrap_fast_dp:main"
"dlstbx.wrap_multi_xia2" = "dlstbx.cli.wrap_multi_xia2:main"
"eiger2xds" = "dlstbx.cli.eiger2xds:run"
"em.visits" = "dlstbx.cli.em_visits:run"
"em.running" = "dlstbx.cli.em_running:run"
"i19.tail" = "dlstbx.cli.i19_tail:run"
"it.status" = "dlstbx.cli.it_status:run"

[project.entry-points."zocalo.wrappers"]
align_crystal = "dlstbx.wrapper.dlstbx_align_crystal:AlignCrystalWrapper"
AlphaFold = "dlstbx.wrapper.alphafold:AlphaFoldWrapper"
autoproc = "dlstbx.wrapper.autoPROC:autoPROCWrapper"
best = "dlstbx.wrapper.best:BESTWrapper"
big_ep = "dlstbx.wrapper.big_ep:BigEPWrapper"
dc_sim = "dlstbx.wrapper.dc_sim:DCSimWrapper"
dimple = "dlstbx.wrapper.dimple:DimpleWrapper"
dozor = "dlstbx.wrapper.dozor:DozorWrapper"
edna = "dlstbx.wrapper.edna:EdnaWrapper"
ep_predict = "dlstbx.wrapper.ep_predict:EPPredictWrapper"
fast_dp = "dlstbx.wrapper.fast_dp:FastDPWrapper"
fast_ep = "dlstbx.wrapper.fast_ep:FastEPWrapper"
fast_rdp = "dlstbx.wrapper.fast_rdp:FastRDPWrapper"
metal_id = "dlstbx.wrapper.metal_id:MetalIdWrapper"
mosflm_strategy = "dlstbx.wrapper.mosflm_strategy:MosflmStrategyWrapper"
mr_predict = "dlstbx.wrapper.mr_predict:MRPredictWrapper"
mrbump = "dlstbx.wrapper.mrbump:MrBUMPWrapper"
phaser_ellg = "dlstbx.wrapper.phaser_ellg:PhasereLLGWrapper"
rlv = "dlstbx.wrapper.rlv:RLVWrapper"
scaleit = "dlstbx.wrapper.scaleit:ScaleitWrapper"
screen19 = "dlstbx.wrapper.screen19:Screen19Wrapper"
screen19_mx = "dlstbx.wrapper.screen19_mx:Screen19MXWrapper"
shelxc_stats = "dlstbx.wrapper.shelxc_stats:ShelxcStatsWrapper"
shelxt = "dlstbx.wrapper.shelxt:ShelxtWrapper"
spotcounts = "dlstbx.wrapper.spot_counts_per_image:SCPIWrapper"
stepped_transmission = "dlstbx.wrapper.stepped_transmission:SteppedTransmissionWrapper"
topaz3 = "dlstbx.wrapper.topaz3_wrapper:Topaz3Wrapper"
xia2 = "dlstbx.wrapper.xia2:Xia2Wrapper"
"xia2.multiplex" = "dlstbx.wrapper.xia2_multiplex:Xia2MultiplexWrapper"
"xia2.strategy" = "dlstbx.wrapper.xia2_strategy:Xia2StrategyWrapper"
"xia2.to_shelxcde" = "dlstbx.wrapper.xia2_to_shelxcde:Xia2toShelxcdeWrapper"
"xia2.ssx" = "dlstbx.wrapper.xia2_ssx:Xia2SsxWrapper"
"xia2.ssx_reduce" = "dlstbx.wrapper.xia2_ssx:Xia2SsxReduceWrapper"
xoalign = "dlstbx.wrapper.xoalign:XOalignWrapper"

[project.entry-points."workflows.services"]
DLSArchiver = "dlstbx.services.archiver:DLSArchiver"
DLSBridge = "dlstbx.services.bridge:DLSBridge"
DLSCluster = "dlstbx.services.cluster:DLSCluster"
DLSClusterMonitor = "dlstbx.services.cluster_monitor:DLSClusterMonitor"
DLSController = "dlstbx.services.controller:DLSController"
DLSDropfilePickup = "dlstbx.services.dropfile_pickup:DLSDropfilePickup"
DLSFileWatcher = "dlstbx.services.filewatcher:DLSFileWatcher"
DLSISPyB = "dlstbx.services.ispybsvc:DLSISPyB"
DLSISPyBPIA = "dlstbx.services.ispybsvc_pia:DLSISPyBPIA"
DLSImages = "dlstbx.services.images:DLSImages"
DLSIndexer = "dlstbx.services.indexer:DLSIndexer"
DLSMimas = "dlstbx.services.mimas:DLSMimas"
DLSMimasBacklog = "dlstbx.services.mimas_backlog:DLSMimasBacklog"
DLSNexusParser = "dlstbx.services.nexusparser:DLSNexusParser"
DLSNotifyGDA = "dlstbx.services.notifygda:DLSNotifyGDA"
DLSPerImageAnalysis = "dlstbx.services.per_image_analysis:DLSPerImageAnalysis"
DLSReverseBridge = "dlstbx.services.bridge_reverse:DLSReverseBridge"
DLSTrigger = "dlstbx.services.trigger:DLSTrigger"
DLSValidation = "dlstbx.services.validation:DLSValidation"
DLSXRayCentering = "dlstbx.services.xray_centering:DLSXRayCentering"
HTCondorStats = "dlstbx.services.htcondorstats:HTCondorStats"
HTCondorWatcher = "dlstbx.services.htcondorwatcher:HTCondorWatcher"
S3EchoUploader = "dlstbx.services.s3echo_uploader:S3EchoUploader"
SSXPlotter = "dlstbx.services.ssx_plotter:SSXPlotter"

[project.entry-points."zocalo.mimas.handlers"]
eiger_screening = "dlstbx.mimas.core:handle_eiger_screening"
eiger_serial_end = "dlstbx.mimas.ssx:handle_eiger_serial_end"
eiger_serial_start = "dlstbx.mimas.ssx:handle_eiger_serial_start"
eiger_end = "dlstbx.mimas.core:handle_eiger_end"
i03_eiger_start_gridscan = "dlstbx.mimas.core:handle_eiger_start_i03_gridscan"
i03_eiger_end = "dlstbx.mimas.core:handle_eiger_end_i03"
i03_eiger_end_i03 = "dlstbx.mimas.core:handle_eiger_end_i03_and_i03_only"
i15_end = "dlstbx.mimas.i15:handle_i15_end"
i19_pilatus_start = "dlstbx.mimas.i19:handle_i19_start_pilatus"
i19_pilatus_end = "dlstbx.mimas.i19:handle_i19_end_pilatus"
i19_eiger_end = "dlstbx.mimas.i19:handle_i19_end_eiger"
handle_i19_end_eiger_serial = "dlstbx.mimas.i19:handle_i19_end_eiger_serial"
handle_i19_end_group_eiger_serial = "dlstbx.mimas.i19:handle_i19_end_group_eiger_serial"
i19_end = "dlstbx.mimas.i19:handle_i19_end"
pilatus_end = "dlstbx.mimas.core:handle_pilatus_end"
pilatus_gridscan_start = "dlstbx.mimas.core:handle_pilatus_gridscan_start"
pilatus_not_gridscan_start = "dlstbx.mimas.core:handle_pilatus_not_gridscan_start"
pilatus_screening = "dlstbx.mimas.core:handle_pilatus_screening"
pilatus_serial_end = "dlstbx.mimas.ssx:handle_pilatus_serial_end"
pilatus_serial_start = "dlstbx.mimas.ssx:handle_pilatus_serial_start"
rotation_end = "dlstbx.mimas.core:handle_rotation_end"
vmxi_end = "dlstbx.mimas.vmxi:handle_vmxi_end"
vmxi_gridscan = "dlstbx.mimas.vmxi:handle_vmxi_gridscan"
vmxi_rotation = "dlstbx.mimas.vmxi:handle_vmxi_rotation_scan"
vmxi_start = "dlstbx.mimas.vmxi:handle_vmxi_start"

[project.entry-points."zocalo.health_checks"]
"it.filesystem.gpfs-expulsion" = "dlstbx.health_checks.graylog:check_gfps_expulsion"
"it.filesystem.responsiveness" = "dlstbx.health_checks.graylog:check_filesystem_is_responsive"
"it.filesystem.space" = "dlstbx.health_checks.filesystem:check_free_space"
"it.internet" = "dlstbx.health_checks.network:check_internet"
"it.quota" = "dlstbx.health_checks.quota:check_quota"
"remote.github" = "dlstbx.health_checks.network:check_github"
"services.activemq" = "dlstbx.health_checks.activemq:check_activemq_health"
"services.cas" = "dlstbx.health_checks.network:check_cas"
"services.dials-rest" = "dlstbx.health_checks.dials_rest:check_dials_rest"
"services.epics" = "dlstbx.health_checks.epics:get_diamond_ring_status"
"services.gitlab" = "dlstbx.health_checks.network:check_gitlab"
"services.graylog.alive" = "dlstbx.health_checks.graylog:check_graylog_is_alive"
"services.graylog.healthy" = "dlstbx.health_checks.graylog:check_graylog_is_healthy"
"services.graylog.history" = "dlstbx.health_checks.graylog:check_graylog_has_history"
"services.ispyb" = "dlstbx.health_checks.ispyb:check_ispyb_servers"
"services.jenkins" = "dlstbx.health_checks.network:check_jenkins"
"services.jenkins.certificate" = "dlstbx.health_checks.jenkins:check_jenkins_certificate"
"services.jira" = "dlstbx.health_checks.network:check_jira"
"services.mx.agamemnon" = "dlstbx.health_checks.network:check_agamemnon"
"services.mx.dbserver" = "dlstbx.health_checks.network:check_dbserver"
"services.mx.amqrmqbridge" = "dlstbx.health_checks.activemq_rabbitmq_migration:check_PIA_bridge_runs"
"services.rabbitmq" = "dlstbx.health_checks.rabbitmq:check_rabbitmq_health"
"services.slurm.jwt" = "dlstbx.health_checks.slurm:check_slurm_gda2_jwt"
"services.synchweb" = "dlstbx.health_checks.network:check_synchweb"
"services.uas" = "dlstbx.health_checks.network:check_uas"
"services.zocalo.stash" = "dlstbx.health_checks.zocalo:check_zocalo_stash"
"vmxi.hold" = "dlstbx.health_checks.filesystem:check_vmxi_holding_area"
"zocalo.dlq.activemq" = "dlstbx.health_checks.activemq:check_activemq_dlq"
"zocalo.dlq.rabbitmq" = "dlstbx.health_checks.rabbitmq:check_rabbitmq_dlq"

[project.entry-points."zocalo.services.cluster.schedulers"]
slurm = "dlstbx.services.cluster:submit_to_slurm"
iris = "dlstbx.services.cluster:submit_to_slurm"

[project.entry-points."zocalo.services.dispatcher.filters"]
ispyb = "dlstbx.ispybtbx:ispyb_filter"

[project.entry-points."zocalo.services.dispatcher.ready_for_processing"]
ispyb = "dlstbx.ispybtbx:ready_for_processing"

[project.entry-points."zocalo.services.images.plugins"]
diffraction = "dlstbx.services.images:diffraction"
thumbnail = "dlstbx.services.images:thumbnail"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "I"]
unfixable = ["F841"]
# E501 line too long (handled by formatter)
# E741 Ambiguous variable name (We have lots of meaningful I, L, l)
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"installer/**.py" = ["I"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["xia2"]
required-imports = ["from __future__ import annotations"]
