[metadata]
name = dlstbx
version = 1.0
description = Collection of DLS-internal tools for Data Analysis and beyond
author = Diamond Light Source - Scientific Software
author_email = scientificsoftware@diamond.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    GitHub = https://github.com/DiamondLightSource/python-dlstbx
    Bug-Tracker = https://github.com/DiamondLightSource/python-dlstbx/issues

[options]
include_package_data = True
python_requires = >=3.8
zip_safe = False

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
