[metadata]
name = dlstbx
version = 1.0
description = Collection of DLS-internal tools for Data Analysis and beyond
author = Diamond Light Source - Scientific Software
author_email = scientificsoftware@diamond.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    GitHub = https://github.com/DiamondLightSource/python-dlstbx
    Bug-Tracker = https://github.com/DiamondLightSource/python-dlstbx/issues

[options]
include_package_data = True
python_requires = >=3.8
zip_safe = False
